--- a/prompts/agents/character_helper/_user.j2
+++ b/prompts/agents/character_helper/_user.j2
@@ -1,5 +1,3 @@
-Please create a character based on the following notes.
+Please create a character based on the following request:
 
-Role: {{ role_notes }}
-Personality: {{ personality_notes }}
-Background: {{ background_notes }}
+{{ user_request }}
